--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <button id="btn-redo"> redo </button>
         <button id="btn-delete"> 要素の削除 </button>
     </div>
-    <a href="https://github.com/NagaJun1/sample_draw2d"> Github ソースコード </a>
+    <div class="margin10"> ※スマホでは機能しません </div>
+    <div id='github-link'>
+        <a href="https://github.com/NagaJun1/sample_draw2d"> Github ソースコード </a>
+    </div>
     <div id="main-canvas"></div>
 </body>
 
